Bug 310496 - Settings window too small when opened from tray icon
Summary: Settings window too small when opened from tray icon
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Control Module (other bugs)
Version First Reported In: 0.9
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Lamarque V. Souza
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2012-11-22 12:23 UTC by Janek Bevendorff
Modified: 2012-12-01 18:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0.6
Sentry Crash Report:
kde: Usability+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janek Bevendorff 2012-11-22 12:23:33 UTC
The settings window is too small to be used properly when it is opened via the systray icon (i.e. when you right click in the tray and choose "Network Management Settings").
It has the right size, however, if you open it via the plasma popup or the system settings.

Reproducible: Always
Comment 1 Lamarque V. Souza 2012-12-01 18:07:34 UTC
Git commit 40f0772d6cb61010be23e995674d0b37393d62fe by Lamarque V. Souza.
Committed on 01/12/2012 at 19:05.
Pushed by lvsouza into branch 'master'.

Set configuration dialog size when opening it via systray icon's right menu.
FIXED-IN: 0.9.0.6

M  +2    -0    applet/networkmanager.cpp

http://commits.kde.org/networkmanagement/40f0772d6cb61010be23e995674d0b37393d62fe
Comment 2 Lamarque V. Souza 2012-12-01 18:12:08 UTC
Git commit a63f2880af6877767533a16e8dd0226e36d64096 by Lamarque V. Souza.
Committed on 01/12/2012 at 19:05.
Pushed by lvsouza into branch 'nm09'.

Set configuration dialog size when opening it via systray icon's right menu.
FIXED-IN: 0.9.0.6
(cherry picked from commit 40f0772d6cb61010be23e995674d0b37393d62fe)

M  +2    -0    applet/networkmanager.cpp

http://commits.kde.org/networkmanagement/a63f2880af6877767533a16e8dd0226e36d64096