Set configuration dialog size when opening it via systray icon's right menu.

BUG: 310496
FIXED-IN: 0.9.0.6